0920Chocolate_custom_screen3

--- a/Customization.html
+++ b/Customization.html
@@ -47,14 +47,12 @@
                 </div>
                 <div id="Operation_tips_box1_first_row2">
                     <p>選擇不同的口味，搭配不同的餡料</p>
-                    <!-- <p>拖移來裝飾巧克力</p> -->
                 </div>
                 <div id="Operation_tips_box2_first_row3_2">
                     <div>
                         <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
                             id="Operation_tips_box2_first_row3_img3">
                     </div>
-
                     <img src="./images/Custom_block/left_sidebar/Operation_tips2.svg" alt=""
                         id="Operation_tips_box1_first_row3_img1">
                     <div>
@@ -73,7 +71,6 @@
                 </div>
                 <div id="Operation_tips_box1_first_row2">
                     <p>也提供不同的模板可選擇</p>
-                    <!-- <p>拖移來裝飾巧克力</p> -->
                 </div>
                 <div id="Operation_tips_box1_first_row3_2">
                     <div>
@@ -123,7 +120,6 @@
                 </div>
                 <div id="Operation_tips_box1_first_row2-1">
                     <p>開始設計獨一無二的巧克力禮盒</p>
-                    <!-- <p>在卡片寫下想給她的祝福</p> -->
                 </div>
                 <div id="Operation_tips_box1_first_row5_2">
                     <div>
@@ -134,8 +130,6 @@
                         id="Operation_tips_box5_first_row3_img2">
                     <div id="Operation_tips_box2_first_row3_img0">
                     </div>
-                    <!-- <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
-                        id="Operation_tips_box1_first_row3_img2-1"> -->
                 </div>
                 <div id="Operation_tips_box1_first_row4">
                     <img src="./images/Custom_block/left_sidebar/Operation_tips5_1.svg" alt="">
@@ -143,20 +137,6 @@
             </div>
         </div>
     </div>
-    <!-- <div id="menu"></div>
-    <script type="text/babel">
-        function App() {
-            React.useEffect(() => {
-                menuJS();
-            }, []); // 确保 toggleDropdown 在组件渲染后调用
-            return (
-                <Menu />
-            )
-        }
-        ReactDOM
-            .createRoot(document.getElementById('menu'))
-            .render(<App />);
-    </script> -->
     <main id="main">
         <div id="menu">
             <ul id="menu_id">
@@ -174,10 +154,12 @@
                     <li><a href="#" id="menu_id_icon_search"><img
                                 src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
                     </li>
-                    <li id="menu_id_icon_show"><a href="./login.html"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                    <li id="menu_id_icon_show"><a href="./login.html"><img src="./images/Custom_block/menu/Vector.svg"
+                                alt=""></a>
                     </li>
-                    <li><a href="./shopping_cart.html"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
-                                alt=""></a></li>
+                    <li><a href="./shopping_cart.html"><img
+                                src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
+                    </li>
                 </div>
             </ul>
             <ul id="menu_id_search">
@@ -190,17 +172,14 @@
                         <a href="#" id="menu_id_search_divBox_a2"><img src="./images/Custom_block/menu/Xicon.svg"
                                 alt=""></a>
                     </div>
-                <li><a href="./login.html" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                <li><a href="./login.html" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg"
+                            alt=""></a>
                 </li>
                 <li><a href="./shopping_cart.html" id="menu_id_search_li3"><img
                             src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
                 </li>
             </ul>
         </div>
-
-
-
-
         <div id="all">
             <div id="left_sidebar">
                 <ul id="left_sidebar_ul">
@@ -233,7 +212,6 @@
                                 <a href="javascript:void(0)" class="left_menu_img1">
                                     <img id="milk_chocolate"
                                         src="./images/Custom_block/left_menu/first_floor/Frame 1.svg" alt="">
-                                    <!-- <p>牛奶巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
@@ -241,7 +219,6 @@
                                 <a href="javascript:void(0)" class="left_menu_img2">
                                     <img id="dark_chocolate"
                                         src="./images/Custom_block/left_menu/first_floor/Ellipse 2.svg" alt="">
-                                    <!-- <p>黑巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
@@ -249,7 +226,6 @@
                                 <a href="javascript:void(0)" class="left_menu_img3">
                                     <img id="white_chocolate"
                                         src="./images/Custom_block/left_menu/first_floor/Ellipse 3.svg" alt="">
-                                    <!-- <p>白巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
@@ -257,7 +233,6 @@
                                 <a href="javascript:void(0)" class="left_menu_img4">
                                     <img id="strawberry_chocolate"
                                         src="./images/Custom_block/left_menu/first_floor/Ellipse 4.svg" alt="">
-                                    <!-- <p>草莓巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
@@ -265,7 +240,6 @@
                                 <a href="javascript:void(0)" class="left_menu_img5">
                                     <img id="matcha_chocolate"
                                         src="./images/Custom_block/left_menu/first_floor/Ellipse 5.svg" alt="">
-                                    <!-- <p>抹茶巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
@@ -273,7 +247,6 @@
                                 <a href="javascript:void(0)" class="left_menu_img6">
                                     <img id="caramel_chocolate"
                                         src="./images/Custom_block/left_menu/first_floor/Ellipse 6.svg" alt="">
-                                    <!-- <p>焦糖巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
@@ -333,26 +306,6 @@
                         <div id="left_menu2_hr">
                             <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
                         </div>
-                        <!-- <div class="left_menu2_div2">
-                            <p class="left_menu2_div1_p">乾燥花瓣</p>
-                            <ul>
-                                <li>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 7.svg" alt=""
-                                        id="roses_img"></img>
-                                    <p>玫瑰花</p>
-                                </li>
-                                <li>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 8.svg" alt=""
-                                        id="chrysanthemum_img"> </img>
-                                    <p>菊花</p>
-                                </li>
-                                <li>
-                                    <img src="./images/Custom_block/left_menu/second_floor/Ellipse 9.svg" alt=""
-                                        id="lavender_img"> </img>
-                                    <p>薰衣草</p>
-                                </li>
-                            </ul>
-                        </div> -->
                         <div id="left_menu_right2"><a href="javascript:void(0)"><img
                                     src="./images/Custom_block/left_menu/Frame right.svg" alt=""
                                     class="left_menu_right1_img"></a>
@@ -361,16 +314,12 @@
                 </div>
                 <div class="left_menu3">
                     <p class="left_menu3_p">文字</p>
-                    <!-- <div class="left_menu3_div_input">
-                        <input type="text" class="left_menu3_input" placeholder="請輸入文字...">
-                    </div> -->
                     <p class="left_menu3_p2">文字口味(巧克力)</p>
                     <ul>
                         <li>
                             <a href="javascript:void(0)" id="left_menu3_p2_a1">
                                 <img src="./images/Custom_block/left_menu/third_floor/Ellipse 1.svg" alt=""
                                     id="left_menu3_p2_a1_img1">
-                                <!-- <p>黑巧</p> -->
                                 </img>
                             </a>
                         </li>
@@ -378,7 +327,6 @@
                             <a href="javascript:void(0)" id="left_menu3_p2_a2">
                                 <img src="./images/Custom_block/left_menu/third_floor/Ellipse 2.svg" alt=""
                                     id="left_menu3_p2_a1_img2">
-                                <!-- <p>白巧</p> -->
                                 </img>
                             </a>
                         </li>
@@ -386,7 +334,6 @@
                             <a href="javascript:void(0)" id="left_menu3_p2_a3">
                                 <img src="./images/Custom_block/left_menu/third_floor/Ellipse 3.svg" alt=""
                                     id="left_menu3_p2_a1_img3">
-                                <!-- <p>牛奶</p> -->
                                 </img>
                             </a>
                         </li>
@@ -394,7 +341,6 @@
                             <a href="javascript:void(0)" id="left_menu3_p2_a4">
                                 <img src="./images/Custom_block/left_menu/third_floor/Ellipse 4.svg" alt=""
                                     id="left_menu3_p2_a1_img4">
-                                <!-- <p>草莓</p> -->
                                 </img>
                             </a>
                         </li>
@@ -439,11 +385,9 @@
                         <img src="./images/Custom_block/left_menu/Frame right.svg" alt=""
                             class="left_menu_right1_img"></a>
                 </div>
-
                 <div class="left_menu4">
                     <p class="left_menu4_p">裝飾</p>
                     <div class="left_menu4_div_input">
-
                         <input type="text" class="left_menu4_input" placeholder="請輸入關鍵字...">
                     </div>
                     <div class="left_menu4_search_p">
@@ -509,7 +453,6 @@
                                 src="./images/Custom_block/left_menu/Frame right.svg" alt=""
                                 class="left_menu_right1_img"></a></div>
                 </div>
-                <!-- <div id="left_menu_right"><a href=""><img src="./image/left menu/Frame right.svg" alt=""></a></div> -->
             </div>
             <div class="middle">
                 <div id="middle_div1">
@@ -525,8 +468,6 @@
                     <img src="./images/Custom_block/middle/downloadedImage 1-6.svg" alt="" class="middle_img10">
                     <img src="./images/Custom_block/middle/downloadedImage 4.svg" alt="" class="middle_img11">
                     <img src="./images/Custom_block/middle/downloadedImage 5.svg" alt="" class="middle_img12">
-
-
                 </div>
                 <div id="middle_div1_box">
                     <div id="middle_div1_box_div1" class="middle_div1_box_div1">
@@ -545,7 +486,6 @@
                     <div id="middle_div1_box_div13"></div>
                     <div id="middle_div1_box_div14"></div>
                     <div id="middle_div1_box_div15"></div>
-
                 </div>
                 <div class="middle_box">
                     <img src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
@@ -577,8 +517,6 @@
                         <div id="middle_small_box13"></div>
                         <div id="middle_small_box14"></div>
                         <div id="middle_small_box15">
-                            <!-- <img src="./images/Custom_block/left_menu/third_floor/Ellipse 5.svg">
-                            <img src="./images/Custom_block/left_menu/third_floor/Ellipse 5.svg"> -->
                         </div>
                     </div>
                 </div>
@@ -604,34 +542,27 @@
                 <ul>
                     <li class="menu_below_li" id="Select_function"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 1.svg" alt="" id="Select_function_img">
-                            <!-- <p>選取</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 2.svg" alt="" id="menu_below_li_left2_img">
-                            <!-- <p>縮放</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left1"><a href="javascript:void(0)"
                             id="menu_below_bug"><img src="./images/Custom_block/menu_below/Frame 3-3.svg" alt=""
                                 id="menu_below_bug_img">
-                            <!-- <p>旋轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="garbage_can"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 4.svg" alt="" id="garbage_can_img">
-                            <!-- <p>刪除</p> -->
                         </a>
                     </li>
                     <li class="menu_below_li" id="menu_below_li_right1"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 5.svg" alt="" id="menu_below_li_right1_img">
-                            <!-- <p>翻轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 6.svg" alt="" id="menu_below_li_right2_img">
-                            <!-- <p>上一步</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right3"><a href="javascript:void(0)">
                             <img src="./images/Custom_block/menu_below/Frame 7.svg" alt=""
                                 id="menu_below_li_right3_img">
-                            <!-- <p>重製</p> -->
                         </a></li>
                 </ul>
             </div>
@@ -643,37 +574,25 @@
                     </li>
                     <li id="Prompt_field_img1" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 1.svg" alt="">
-                        <!-- <p>選擇巧克力</p> -->
                     </li>
                     <li id="Prompt_field_img2" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 2.svg" alt="">
-                        <!-- <p>選擇小巧克力</p>。 -->
                     </li>
                     <li id="Prompt_field_img3" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 3.svg" alt="">
-                        <!-- <p>選擇禮盒</p> -->
                     </li>
                     <li id="Prompt_field_img4" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 4.svg" alt="">
-                        <!-- <p>選擇卡片</p> -->
                     </li>
                     <li id="Prompt_field_img5">
                         <a href="./Customization_two_page.html">
-                            <!-- <p>下一步</p>
-                            </a>
-                        </li>
-                        <li id="Prompt_field_img6">
-                            <a href="#"> -->
                             <img src="./images/Custom_block/Prompt_field/Group 5.svg" alt="">
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-
     </main>
-
-    <!-- <script src="./js/jq.js"></script> -->
     <script src="./js/Customization.js"></script>
     <script src="./js/Drag_function.js"></script>
     <script src="./js/function_Block_Below.js"></script>
