--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -15,21 +15,6 @@
 </head>
 
 <body>
-    <!-- <div id="menu"></div>
-    <script type="text/babel">
-        function App() {
-            React.useEffect(() => {
-                menuJS();
-            }, []); // 确保 toggleDropdown 在组件渲染后调用
-            return (
-                <Menu />
-            )
-        }
-        ReactDOM
-            .createRoot(document.getElementById('menu'))
-            .render(<App />);
-    </script> -->
-    <!-- <main id="main"> -->
     <main id="main">
         <div id="menu">
             <ul id="menu_id">
@@ -47,10 +32,12 @@
                     <li><a href="#" id="menu_id_icon_search"><img
                                 src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
                     </li>
-                    <li id="menu_id_icon_show"><a href="./login.html"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                    <li id="menu_id_icon_show"><a href="./login.html"><img src="./images/Custom_block/menu/Vector.svg"
+                                alt=""></a>
                     </li>
-                    <li><a href="./shopping_cart.html"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
-                                alt=""></a></li>
+                    <li><a href="./shopping_cart.html"><img
+                                src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
+                    </li>
                 </div>
             </ul>
             <ul id="menu_id_search">
@@ -63,15 +50,14 @@
                         <a href="#" id="menu_id_search_divBox_a2"><img src="./images/Custom_block/menu/Xicon.svg"
                                 alt=""></a>
                     </div>
-                <li><a href="./login.html" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                <li><a href="./login.html" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg"
+                            alt=""></a>
                 </li>
                 <li><a href="./shopping_cart.html" id="menu_id_search_li3"><img
                             src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
                 </li>
             </ul>
         </div>
-
-
         <div id="all">
             <div id="left_sidebar_second_page">
                 <ul>
@@ -94,7 +80,6 @@
                         <a href="javascript:void(0)" id="milk_chocolate_box"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 4.svg" alt=""
                                 class="select_field1__second_page_img" id="milk_chocolate"></a>
-                        <!-- <img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 6-1.svg" alt=""> -->
                         <a href="javascript:void(0)" id="dark_chocolate_box"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 5.svg" alt=""
                                 class="select_field1__second_page_img" id="dark_chocolate"></a>
@@ -204,7 +189,6 @@
                                 alt=""></a>
                     </div>
                 </div>
-
             </div>
             <div id="center_display_second_page">
                 <div id="center_display_second_page_make_img">
@@ -228,7 +212,8 @@
                     <img id="center_display_second_page_box1"
                         src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
                     <div id="center_display_second_page_box_slab">
-                        <img src="./images/Custom_block/small_chocolate/left_sidebar/Rectangle 99.svg" alt="" id="center_display_second_page_box_slab_img">
+                        <img src="./images/Custom_block/small_chocolate/left_sidebar/Rectangle 99.svg" alt=""
+                            id="center_display_second_page_box_slab_img">
                     </div>
                     <div id="second_page_smallbox">
                         <div id="second_page_smallbox_div1"><img
@@ -261,34 +246,27 @@
                 <ul>
                     <li class="menu_below_li" id="Select_function"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 1.svg" alt="" id="Select_function_img">
-                            <!-- <p>選取</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 2.svg" alt="" id="menu_below_li_left2_img">
-                            <!-- <p>縮放</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left1"><a href="javascript:void(0)"
                             id="menu_below_bug"><img src="./images/Custom_block/menu_below/Frame 3.svg" alt=""
                                 id="menu_below_bug_img">
-                            <!-- <p>旋轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="garbage_can"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 4.svg" alt="" id="garbage_can_img">
-                            <!-- <p>刪除</p> -->
                         </a>
                     </li>
                     <li class="menu_below_li" id="menu_below_li_right1"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 5.svg" alt="" id="menu_below_li_right1_img">
-                            <!-- <p>翻轉</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right2"><a href="javascript:void(0)"><img
                                 src="./images/Custom_block/menu_below/Frame 6.svg" alt="" id="menu_below_li_right2_img">
-                            <!-- <p>上一步</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_right3"><a href="javascript:void(0)">
                             <img src="./images/Custom_block/menu_below/Frame 7.svg" alt=""
                                 id="menu_below_li_right3_img">
-                            <!-- <p>重製</p> -->
                         </a></li>
                 </ul>
             </div>
@@ -314,7 +292,6 @@
     </main>
     <script src="./js/Customization_two.js"></script>
     <script src="./js/Drag_function_two.js"></script>
-    <!-- <script src="./js/function_Block_Below.js"></script> -->
 </body>
 
 </html>
