--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="./css/index_textForAnimate.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <!-- 引用menu -->
     <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
@@ -139,7 +141,7 @@
         </section>
         <section id="QUALITY">
             <div class="pic_box">
-                <div class="quality_title" id="quality"></div>
+                <div class="quality_title smoove" data-move-y="10px" id="quality">QUALITY</div>
             </div>
         </section>
         <section id="INGREDIENT">
