圖片壓縮更新

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
             <div class="taste_r">
                 <img class="title" src="./index_images/taste-title.svg" alt="">
-                <img class="pic" src="./index_images/taste--pic.svg" alt="">
+                <img class="pic" src="./index_images/taste--pic.png" alt="">
             </div>
 
         </section>
@@ -194,7 +194,7 @@
 
                 <div class="cn_title">可品嚐的視覺饗宴</div>
                 <img class="title" src="./index_images/appearance--title.svg" alt="">
-                <img class="pic" src="./index_images/appearance--pic.svg" alt="">
+                <img class="pic" src="./index_images/appearance--pic.jpg" alt="">
                 <div class="arch"></div>
                 <div class="box_br"></div>
 
