--- a/news.html
+++ b/news.html
@@ -42,7 +42,7 @@
 
     <main class="main">
         <header class="title">
-            <!-- <img src="../images/News_shopingcar_Login/Rectangle.png" alt="" class="rectangle">
+            <!-- <img src="./images/News_shopingcar_Login/Rectangle.png" alt="" class="rectangle">
             <h1>NEWS</h1>
             <h3>最新消息</h3> -->
         </header>
@@ -51,7 +51,7 @@
             <section class="news_box">
                 <section class="news">
                     <div class="news_img">
-                        <img src="../images/News_shopingcar_Login/門市開幕.png" alt="">
+                        <img src="./images/News_shopingcar_Login/門市開幕.png" alt="">
                         <div class="opening">
                             <h2>門市開幕</h2>
                             <p>2024.9.20</p>
@@ -73,7 +73,7 @@ Mélange的開幕標誌著一個全新的巧克力體驗時代的開始。我們
                 <aside class="box__list">
                     <a href="#">
                         <div class="content">
-                            <img src="../images/News_shopingcar_Login/新品上市.png" alt="">
+                            <img src="./images/News_shopingcar_Login/新品上市.png" alt="">
                             <p class="date">2024.11.20</p>
                             <p class="font">新品上市</h3>
                                 <!-- <p>巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，
@@ -83,7 +83,7 @@ Mélange的開幕標誌著一個全新的巧克力體驗時代的開始。我們
 
                     <a href="#">
                         <div class="content">
-                            <img src="../images/News_shopingcar_Login/聖誕節.png" alt="">
+                            <img src="./images/News_shopingcar_Login/聖誕節.png" alt="">
                             <p class="date">2024.12.20</p>
                             <p class="font">耶誕限定商品來囉</h3>
 
@@ -94,7 +94,7 @@ Mélange的開幕標誌著一個全新的巧克力體驗時代的開始。我們
 
                     <a href="#">
                         <div class="content">
-                            <img src="../images/News_shopingcar_Login/新年.png" alt="">
+                            <img src="./images/News_shopingcar_Login/新年.png" alt="">
                             <p class="date">2025.1.1</p>
                             <p class="font">新年優惠活動</h3>
 
