--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     </script>
     <div class="title_wrap"><img src="./images/about_images/title.svg" alt=""></div>
     <div class="sec_about">
-        <div class="content"><img src="./images/about_images/about.svg" alt=""></div>
+        <div class="content"><img src="./images/about_images/about.png" alt=""></div>
     </div>
     <div class="sec_traffic">
         <div class="traffic_wrap">
