--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- 引用menu -->
     <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
+    <link rel="icon" href="favicon.ico" >
 
 </head>
 <main>
