--- a/Classic_page.html
+++ b/Classic_page.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/Customization.css">
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
 </head>
 
 <body>
