--- a/QnA.html
+++ b/QnA.html
@@ -14,6 +14,8 @@
     <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
     <script src="./js/Menu.js"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
 
     <title>Q&A</title>
 </head>
