--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./css/about.css">
     <!-- 引用menu -->
     <script type="text/babel" src="./Menu.jsx"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
     <script src="./js/Menu.js"></script>
 </head>
