--- a/news.html
+++ b/news.html
@@ -19,6 +19,8 @@
      <link rel="stylesheet" href="./css/Menu.css">
      <script type="text/babel" src="./Menu.jsx"></script>
      <script src="./js/Menu.js"></script>
+     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
+     <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
 
     </head>
 
