--- a/shop.html
+++ b/shop.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="./css/Menu.css">
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
     <!-- 引用swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/shop.css">
