--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- 引用menu -->
     <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
     
 
 </head>
