--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -12,6 +12,8 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Footer.jsx"></script>
 </head>
 <div id="menu"></div>
 <script type="text/babel">
