--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
+    <script type="text/babel" src="https://illuka6.github.io/chocoMaker/Menu.jsx"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
 </head> 
 
